Bedre typing av oppfolgingsperiode kolonne